<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_sample_01"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSample01Clicked"
        android:text="@string/str_btn_sample_01" />

    <Button
        android:id="@+id/btn_sample_02"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:onClick="onSample02Clicked"
        android:text="@string/str_btn_sample_02" />

    <Button
        android:id="@+id/btn_sample_03"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:onClick="onSample03Clicked"
        android:text="@string/str_btn_sample_03" />

    <Button
        android:id="@+id/btn_sample_04"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:onClick="onSample04Clicked"
        android:visibility="gone"
        android:text="@string/str_btn_sample_04" />

    <Button
        android:id="@+id/btn_sample_05"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:onClick="onTakeScreenShotClicked"
        android:text="@string/str_btn_sample_05" />
</LinearLayout>