<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dim_result_row_size"
    android:orientation="vertical">

    <View
        android:id="@+id/background"
...
