...
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="70dip"
                    android:layout_marginRight="25dip"
                    android:theme="@style/LightSearchContainer">

                    <br.com.edsilfer.android.chipinterface.presenter.ChipEditText
                        android:id="@+id/input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:paddingTop="2dip"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
...
